fix overflow

--- a/src/components/pages/About/About.sass
+++ b/src/components/pages/About/About.sass
@@ -17,6 +17,7 @@
 .about
     display: flex
     flex-direction: row
+    overflow: hidden
 
 .photo
     background-image: url(./../images/about-photo.jpg)
